# anthropic-claude-code

./: .gitignore  CLAUDE.md  README.md  TRANSFORMATION_SUMMARY.md  app.py  brands_example.json  convert-reports.cjs  demo.js  package-lock.json  package.json  pyproject.toml  requirements.txt  view-report.cjs
.streamlit/: config.toml
__tests__/: adFilter.test.js  pipeline.test.js  videoAnalyzer.test.js
config/: default.toml
creative_feedback_loop/: __init__.py  app.py  classifier.py  clickup_matcher.py  csv_aggregator.py  naming_parser.py  novelty_filter.py  pipeline.py  report_generator.py  top50.py  ui.py
creative_feedback_loop/.streamlit/: config.toml
creative_feedback_loop/analyzer/: __init__.py  classifier.py  clickup_client.py  csv_matcher.py  hypothesis_generator.py  (+3 more)
data/: brand-glow-vitamins.json  report-glow-vitamins.txt
deploy/: Dockerfile  README.md  docker-compose.yml  setup.sh  start_tunnel.sh  tunnel_setup.md
docs/: framework-definitions.md  framework-market-sophistication.md  framework-mechanism.md  framework-rootcause.md
meta_ads_analyzer/: __init__.py  cli.py  compare_pipeline.py  direct_pipeline.py  market_pipeline.py  models.py  pipeline.py  scanner.py  selector.py
pain_point_analyzer/: app.py  debug_meta_scraper.py  requirements.txt
prompts/: ad_analysis.txt  pattern_analysis.txt  strategic_dimension_extraction.txt
src/: adExtractor.js  adFilter.js  patternAnalyzer.js  reportGenerator.js  videoAnalyzer.js
tests/: test_dimension_extractor.py  test_market_selector.py  test_searchapi_migration.py  test_selector.py  test_smoke.py
(+81 files in other folders)
